form-group alignment fix

--- a/login.css
+++ b/login.css
@@ -30,6 +30,7 @@ body {
   .form-group {
     margin-bottom: 1rem;
     text-align: left;
+    margin-right: 1rem;
   }
   
   .form-group input {
